--- a/src/app/features/product/filterproduct/filterproduct.component.html
+++ b/src/app/features/product/filterproduct/filterproduct.component.html
@@ -1,23 +1,41 @@
+<!-- Material Accordion container allowing multiple panels to be open -->
 <mat-accordion multi="true">
-    <mat-expansion-panel expanded>
+  <!-- First Expansion Panel for Product Types -->
+  <mat-expansion-panel expanded>  <!-- 'expanded' means panel is open by default -->
       <mat-expansion-panel-header>
-        <mat-panel-title> Tipo </mat-panel-title>
+          <mat-panel-title> Tipo </mat-panel-title>
       </mat-expansion-panel-header>
+
+      <!-- Container that waits for filterItems$ Observable to emit -->
       <ng-container *ngIf="filterItems$ | async as filters">
-        <div *ngFor="let type of filters.type">
-          <mat-checkbox (change)="getFilteredOptions(type)">{{type === 'AllTypes' ? 'Todos' : type }}</mat-checkbox>
-        </div>
+          <!-- Creates checkbox for each product type -->
+          <div *ngFor="let type of filters.type">
+              <mat-checkbox (change)="getFilteredOptions(type)">
+                  <!-- Shows 'Todos' if type is 'AllTypes', otherwise shows the type name -->
+                  {{type === 'AllTypes' ? 'Todos' : type }}
+              </mat-checkbox>
+          </div>
       </ng-container>
-    </mat-expansion-panel>
-    <mat-expansion-panel expanded (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
+  </mat-expansion-panel>
+
+  <!-- Second Expansion Panel for Colors -->
+  <mat-expansion-panel expanded 
+      (opened)="panelOpenState.set(true)" 
+      (closed)="panelOpenState.set(false)">
       <mat-expansion-panel-header>
-        <mat-panel-title> Cor </mat-panel-title>
+          <mat-panel-title> Cor </mat-panel-title>
       </mat-expansion-panel-header>
+
+      <!-- Container that waits for filterItems$ Observable to emit -->
       <ng-container *ngIf="filterItems$ | async as filters">
-        <div *ngFor="let color of filters.color">
-          <mat-checkbox (change)="getFilteredOptions(color)">{{ color === 'AllCollors' ? 'Todos' : color}}</mat-checkbox>
-        </div>
+          <!-- Creates checkbox for each color -->
+          <div *ngFor="let color of filters.color">
+              <mat-checkbox (change)="getFilteredOptions(color)">
+                  <!-- Shows 'Todos' if color is 'AllCollors', otherwise shows the color name -->
+                  {{ color === 'AllCollors' ? 'Todos' : color}}
+              </mat-checkbox>
+          </div>
       </ng-container>
-    </mat-expansion-panel>
-  </mat-accordion>
+  </mat-expansion-panel>
+</mat-accordion>
   
